--- a/Views/Home/Hello.cshtml
+++ b/Views/Home/Hello.cshtml
@@ -1,8 +1,9 @@
 
 <h1>Hello, world!</h1>
 
-<div id="content">Hello</div>
+<div id="content">...</div>
 
 @section Scripts {
-    <script src="@Url.Content("~/scripts/tutorial.jsx")" type="text/jsx"></script>
+    <script src="@Url.Content("~/scripts/tutorial.jsx")"></script>
+    <script src="~/scripts/Hello.jsx"></script>
 }
