--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,8 @@
         <title></title>
     </head>
     <body>
-        <h1>ReactDotNet ...</h1>
+        <h1>React.Net</h1>
+        <hr/>
         @RenderBody()
 
         <script src="https://fb.me/react-0.14.0.min.js"></script>
