make typescript compilation work

--- a/Views/Home/Hello.cshtml
+++ b/Views/Home/Hello.cshtml
@@ -2,7 +2,9 @@
 <h1>Hello, world!</h1>
 
 <div id="content">...</div>
+<div id="react">...</div>
 
 @section Scripts {
     <script src="@Url.Content("~/scripts/tutorial.jsx")"></script>
+    <script src="@Url.Content("~/ts/hello.js")"></script>
 }
